<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/all_asams_map_tablet_menu_list_view_ui"
        android:title="@string/all_asams_map_tablet_menu_list_view_text"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_bar_list_view"
        android:menuCategory="system"
        android:orderInCategory="100"
        />
    
    <item android:id="@+id/all_asams_map_tablet_menu_subregions_ui"
        android:title="@string/all_asams_map_tablet_menu_subregions_text"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_bar_subregions"
        android:menuCategory="system"
        android:orderInCategory="200"
        />
    
    <item android:id="@+id/all_asams_map_tablet_menu_text_query_ui"
        android:title="@string/all_asams_map_tablet_menu_text_query_text"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_bar_query"
        android:menuCategory="system"
        android:orderInCategory="300"
        />
    
    <item android:id="@+id/all_asams_map_tablet_menu_settings_ui"
        android:title="@string/all_asams_map_tablet_menu_settings_text"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_bar_settings"
        android:menuCategory="system"
        android:orderInCategory="400"
        />
    
    <item android:id="@+id/all_asams_map_tablet_menu_info_ui"
        android:title="@string/all_asams_map_tablet_menu_info_text"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_bar_info"
        android:menuCategory="system"
        android:orderInCategory="500"
        />
    
    <item android:id="@+id/all_asams_map_tablet_menu_reset_ui"
        android:title="@string/all_asams_map_tablet_menu_reset_text"
        android:visible="false"
        android:menuCategory="system"
        android:orderInCategory="600"
        />
    
</menu>