<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="10dp">
    
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer_text"
            android:layout_marginBottom="10dp"
            />
        
        <LinearLayout android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
            
    		<Button android:id="@+id/disclaimer_exit_button_ui"
        		android:text="@string/disclaimer_exit_button_text"
        		android:contentDescription="@string/disclaimer_exit_button_text"
        		android:layout_width="0dp"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"
        		android:onClick="disclaimerExitButtonClicked"
        		/>
    		
    		<Button android:id="@+id/disclaimer_agree_button_ui"
        		android:text="@string/disclaimer_agree_button_text"
        		android:contentDescription="@string/disclaimer_agree_button_text"
        		android:layout_width="0dp"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"
        		android:onClick="disclaimerAgreeButtonClicked"
        		/>
    		
		</LinearLayout>
    
    </LinearLayout>

</ScrollView>